--- a/examples/razzle/package.json
+++ b/examples/razzle/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@babel/runtime": "^7.1.5",
     "@reach/router": "^1.2.1",
+    "@loadable/webpack-plugin": "5.2.2",
+    "@loadable/babel-plugin": "5.2.2",
+    "@loadable/server": "5.2.2",
+    "@loadable/component": "5.2.2",
     "common-tags": "^1.8.0",
     "express": "^4.16.2",
     "razzle": "^3.0.0-alpha.0",
